name:                gust
version:             0.0.0
synopsis:            Small language with Pierce/Turner type inference
homepage:            http://github.com/lambdageek/gust
license:             BSD3
author:              Aleksey Kliger
maintainer:          aleksey.kliger@baesystems.com
copyright:           Copyright (c) 2014, Aleksey Kliger

category:            Language

build-type:          Simple
cabal-version:       >=1.8


library
  hs-source-dirs:    src
  exposed-modules:
                     Gust.AST
                   , Gust.Located
                   , Gust.Parse
                   , Gust.Kind
                   , Gust.Type
                   , Gust.Typed
                   , Gust.ElabType
                   , Gust.Check
                   , Gust.LTI.Constraint
                   , Gust.LTI.Avoid
  other-modules:     Data.Order
  
  -- Other library packages from which modules are imported.
  build-depends:     base >= 4.6 && < 5
                   , lens
                   , unbound
                   , RepLib
                   , containers >= 0.5
                   , transformers >= 0.3
                   , mtl >= 2.1.2
                   , parsec >= 3.1.3

  